--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <section class="resultados">
-            <strong>Seu resultado</strong>
+            <h1>Seu resultado</h1>
 
             <div>
                 <strong>76</strong>
@@ -20,7 +20,42 @@
         </section>
 
         <section class="resumo">
+            <h2>Resumo</h2>
 
+            <div>
+                <div>
+                    <img src="./images/icon-reaction.svg" alt="ícone de reação">
+                    <span>Reação</span>
+                </div>
+
+                <strong>80 / 100</strong>
+            </div>
+            <div>
+                <div>
+                    <img src="images/icon-memory.svg" alt="ícone da memória">
+                    <span>Memória</span>
+                </div>
+
+                <strong>92 / 100</strong>
+            </div>
+            <div>
+                <div>
+                    <img src="./images/icon-verbal.svg" alt="ícone verbal">
+                    <span>Verbal</span>
+                </div>
+
+                <strong>61 / 100</strong>
+            </div>
+            <div>
+                <div>
+                    <img src="./images/icon-visual.svg" alt="ícone visual">
+                    <span>Visual</span>
+                </div>
+
+                <strong>73 / 100</strong>
+            </div>
+
+            <button>Continuar</button>
         </section>
     </main>
 </body>
