--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span>Reação</span>
                 </div>
 
-                <strong>80 / 100</strong>
+                <strong>80 <span>/ 100</span></strong>
             </div>
             <div class="resumo_memoria">
                 <div>
@@ -40,7 +40,7 @@
                     <span>Memória</span>
                 </div>
 
-                <strong>92 / 100</strong>
+                <strong>92 <span>/ 100</span></strong>
             </div>
             <div class="resumo_verbal">
                 <div>
@@ -48,7 +48,7 @@
                     <span>Verbal</span>
                 </div>
 
-                <strong>61 / 100</strong>
+                <strong>61 <span>/ 100</span></strong>
             </div>
             <div class="resumo_visual">
                 <div>
@@ -56,7 +56,7 @@
                     <span>Visual</span>
                 </div>
 
-                <strong>73 / 100</strong>
+                <strong>73 <span>/ 100</span></strong>
             </div>
 
             <button>Continuar</button>
